[gd_scene load_steps=2 format=2]

[ext_resource path="res://menu/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="MainMenuTitle" type="Label" parent="."]
margin_left = 448.0
margin_top = 150.0
margin_right = 576.0
margin_bottom = 214.0
text = "PONG

AS A SERVICE"
align = 1
valign = 1

[node name="NodeTypeContainer" type="HBoxContainer" parent="."]
margin_left = 256.0
margin_top = 443.158
margin_right = 768.0
margin_bottom = 483.158
custom_constants/separation = 101
alignment = 1

[node name="ServerMarginContainer" type="MarginContainer" parent="NodeTypeContainer"]
margin_left = 155.0
margin_right = 207.0
margin_bottom = 40.0

[node name="ServerButton" type="Button" parent="NodeTypeContainer/ServerMarginContainer"]
margin_right = 52.0
margin_bottom = 40.0
text = "Server"

[node name="ClientMarginContainer" type="MarginContainer" parent="NodeTypeContainer"]
margin_left = 308.0
margin_right = 357.0
margin_bottom = 40.0

[node name="ClientButton" type="Button" parent="NodeTypeContainer/ClientMarginContainer"]
margin_right = 49.0
margin_bottom = 40.0
text = "Client"

[node name="QuitButtonsContainer" type="HBoxContainer" parent="."]
margin_left = 256.0
margin_top = 563.0
margin_right = 768.0
margin_bottom = 603.0
custom_constants/separation = 101
alignment = 1

[node name="QuitMarginContainer" type="MarginContainer" parent="QuitButtonsContainer"]
margin_left = 236.0
margin_right = 276.0
margin_bottom = 40.0

[node name="QuitButton" type="Button" parent="QuitButtonsContainer/QuitMarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
text = "Quit"
